external/Clay-cs/Clay-builder/src/clay.h


typedef struct Clay_String {
    bool isStaticallyAllocated;
    int32_t length;
    const char *chars;
} Clay_String;
typedef struct Clay_StringSlice {
    int32_t length;
    const char *chars;
    const char *baseChars; 
} Clay_StringSlice;
typedef struct Clay_Context Clay_Context;
typedef struct Clay_Arena {
    uintptr_t nextAllocation;
    size_t capacity;
    char *memory;
} Clay_Arena;
typedef struct Clay_Dimensions {
    float width, height;
} Clay_Dimensions;
typedef struct Clay_Vector2 {
    float x, y;
} Clay_Vector2;
typedef struct Clay_Color {
    float r, g, b, a;
} Clay_Color;
typedef struct Clay_BoundingBox {
    float x, y, width, height;
} Clay_BoundingBox;
typedef struct Clay_ElementId {
    uint32_t id; 
    uint32_t offset; 
    uint32_t baseId; 
    Clay_String stringId; 
} Clay_ElementId;
typedef struct
{
    int32_t capacity;
    int32_t length;
    Clay_ElementId *internalArray;
} Clay_ElementIdArray;
typedef struct Clay_CornerRadius {
    float topLeft;
    float topRight;
    float bottomLeft;
    float bottomRight;
} Clay_CornerRadius;
typedef CLAY_PACKED_ENUM {
    CLAY_LEFT_TO_RIGHT,
    CLAY_TOP_TO_BOTTOM,
} Clay_LayoutDirection;
typedef CLAY_PACKED_ENUM {
    CLAY_ALIGN_X_LEFT,
    CLAY_ALIGN_X_RIGHT,
    CLAY_ALIGN_X_CENTER,
} Clay_LayoutAlignmentX;
typedef CLAY_PACKED_ENUM {
    CLAY_ALIGN_Y_TOP,
    CLAY_ALIGN_Y_BOTTOM,
    CLAY_ALIGN_Y_CENTER,
} Clay_LayoutAlignmentY;
typedef CLAY_PACKED_ENUM {
    CLAY__SIZING_TYPE_FIT,
    CLAY__SIZING_TYPE_GROW,
    CLAY__SIZING_TYPE_PERCENT,
    CLAY__SIZING_TYPE_FIXED,
} Clay__SizingType;
typedef struct Clay_ChildAlignment {
    Clay_LayoutAlignmentX x; 
    Clay_LayoutAlignmentY y; 
} Clay_ChildAlignment;
typedef struct Clay_SizingMinMax {
    float min; 
    float max; 
} Clay_SizingMinMax;
typedef struct Clay_SizingAxis {
    union {
        Clay_SizingMinMax minMax; 
        float percent; 
    } size;
    Clay__SizingType type; 
} Clay_SizingAxis;
typedef struct Clay_Sizing {
    Clay_SizingAxis width; 
    Clay_SizingAxis height;  
} Clay_Sizing;
typedef struct Clay_Padding {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
} Clay_Padding;
typedef struct Clay_LayoutConfig {
    Clay_Sizing sizing; 
    Clay_Padding padding; 
    uint16_t childGap; 
    Clay_ChildAlignment childAlignment; 
    Clay_LayoutDirection layoutDirection; 
} Clay_LayoutConfig;
typedef CLAY_PACKED_ENUM {
    CLAY_TEXT_WRAP_WORDS,
    CLAY_TEXT_WRAP_NEWLINES,
    CLAY_TEXT_WRAP_NONE,
} Clay_TextElementConfigWrapMode;
typedef CLAY_PACKED_ENUM {
    CLAY_TEXT_ALIGN_LEFT,
    CLAY_TEXT_ALIGN_CENTER,
    CLAY_TEXT_ALIGN_RIGHT,
} Clay_TextAlignment;
typedef struct Clay_TextElementConfig {
    void *userData;
    Clay_Color textColor;
    uint16_t fontId;
    uint16_t fontSize;
    uint16_t letterSpacing;
    uint16_t lineHeight;
    Clay_TextElementConfigWrapMode wrapMode;
    Clay_TextAlignment textAlignment;
} Clay_TextElementConfig;
typedef struct Clay_AspectRatioElementConfig {
    float aspectRatio; 
} Clay_AspectRatioElementConfig;
typedef struct Clay_ImageElementConfig {
    void* imageData; 
} Clay_ImageElementConfig;
typedef CLAY_PACKED_ENUM {
    CLAY_ATTACH_POINT_LEFT_TOP,
    CLAY_ATTACH_POINT_LEFT_CENTER,
    CLAY_ATTACH_POINT_LEFT_BOTTOM,
    CLAY_ATTACH_POINT_CENTER_TOP,
    CLAY_ATTACH_POINT_CENTER_CENTER,
    CLAY_ATTACH_POINT_CENTER_BOTTOM,
    CLAY_ATTACH_POINT_RIGHT_TOP,
    CLAY_ATTACH_POINT_RIGHT_CENTER,
    CLAY_ATTACH_POINT_RIGHT_BOTTOM,
} Clay_FloatingAttachPointType;
typedef struct Clay_FloatingAttachPoints {
    Clay_FloatingAttachPointType element; 
    Clay_FloatingAttachPointType parent; 
} Clay_FloatingAttachPoints;
typedef CLAY_PACKED_ENUM {
    CLAY_POINTER_CAPTURE_MODE_CAPTURE,
    CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH,
} Clay_PointerCaptureMode;
typedef CLAY_PACKED_ENUM {
    CLAY_ATTACH_TO_NONE,
    CLAY_ATTACH_TO_PARENT,
    CLAY_ATTACH_TO_ELEMENT_WITH_ID,
    CLAY_ATTACH_TO_ROOT,
} Clay_FloatingAttachToElement;
typedef CLAY_PACKED_ENUM {
    CLAY_CLIP_TO_NONE,
    CLAY_CLIP_TO_ATTACHED_PARENT
} Clay_FloatingClipToElement;
typedef struct Clay_FloatingElementConfig {
    Clay_Vector2 offset;
    Clay_Dimensions expand;
    uint32_t parentId;
    int16_t zIndex;
    Clay_FloatingAttachPoints attachPoints;
    Clay_PointerCaptureMode pointerCaptureMode;
    Clay_FloatingAttachToElement attachTo;
    Clay_FloatingClipToElement clipTo;
} Clay_FloatingElementConfig;
typedef struct Clay_CustomElementConfig {
    void* customData;
} Clay_CustomElementConfig;
typedef struct Clay_ClipElementConfig {
    bool horizontal; 
    bool vertical; 
    Clay_Vector2 childOffset; 
} Clay_ClipElementConfig;
typedef struct Clay_BorderWidth {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
    uint16_t betweenChildren;
} Clay_BorderWidth;
typedef struct Clay_BorderElementConfig {
    Clay_Color color; 
    Clay_BorderWidth width; 
} Clay_BorderElementConfig;
typedef struct Clay_TextRenderData {
    Clay_StringSlice stringContents;
    Clay_Color textColor;
    uint16_t fontId;
    uint16_t fontSize;
    uint16_t letterSpacing;
    uint16_t lineHeight;
} Clay_TextRenderData;
typedef struct Clay_RectangleRenderData {
    Clay_Color backgroundColor;
    Clay_CornerRadius cornerRadius;
} Clay_RectangleRenderData;
typedef struct Clay_ImageRenderData {
    Clay_Color backgroundColor;
    Clay_CornerRadius cornerRadius;
    void* imageData;
} Clay_ImageRenderData;
typedef struct Clay_CustomRenderData {
    Clay_Color backgroundColor;
    Clay_CornerRadius cornerRadius;
    void* customData;
} Clay_CustomRenderData;
typedef struct Clay_ScrollRenderData {
    bool horizontal;
    bool vertical;
} Clay_ClipRenderData;
typedef struct Clay_BorderRenderData {
    Clay_Color color;
    Clay_CornerRadius cornerRadius;
    Clay_BorderWidth width;
} Clay_BorderRenderData;
typedef union Clay_RenderData {
    Clay_RectangleRenderData rectangle;
    Clay_TextRenderData text;
    Clay_ImageRenderData image;
    Clay_CustomRenderData custom;
    Clay_BorderRenderData border;
    Clay_ClipRenderData clip;
} Clay_RenderData;
typedef struct Clay_ScrollContainerData {
    Clay_Vector2 *scrollPosition;
    Clay_Dimensions scrollContainerDimensions;
    Clay_Dimensions contentDimensions;
    Clay_ClipElementConfig config;
    bool found;
} Clay_ScrollContainerData;
typedef struct Clay_ElementData {
    Clay_BoundingBox boundingBox;
    bool found;
} Clay_ElementData;
typedef CLAY_PACKED_ENUM {
    CLAY_RENDER_COMMAND_TYPE_NONE,
    CLAY_RENDER_COMMAND_TYPE_RECTANGLE,
    CLAY_RENDER_COMMAND_TYPE_BORDER,
    CLAY_RENDER_COMMAND_TYPE_TEXT,
    CLAY_RENDER_COMMAND_TYPE_IMAGE,
    CLAY_RENDER_COMMAND_TYPE_SCISSOR_START,
    CLAY_RENDER_COMMAND_TYPE_SCISSOR_END,
    CLAY_RENDER_COMMAND_TYPE_CUSTOM,
} Clay_RenderCommandType;
typedef struct Clay_RenderCommand {
    Clay_BoundingBox boundingBox;
    Clay_RenderData renderData;
    void *userData;
    uint32_t id;
    int16_t zIndex;
    Clay_RenderCommandType commandType;
} Clay_RenderCommand;
typedef struct Clay_RenderCommandArray {
    int32_t capacity;
    int32_t length;
    Clay_RenderCommand* internalArray;
} Clay_RenderCommandArray;
typedef CLAY_PACKED_ENUM {
    CLAY_POINTER_DATA_PRESSED_THIS_FRAME,
    CLAY_POINTER_DATA_PRESSED,
    CLAY_POINTER_DATA_RELEASED_THIS_FRAME,
    CLAY_POINTER_DATA_RELEASED,
} Clay_PointerDataInteractionState;
typedef struct Clay_PointerData {
    Clay_Vector2 position;
    Clay_PointerDataInteractionState state;
} Clay_PointerData;
typedef struct Clay_ElementDeclaration {
    Clay_ElementId id;
    Clay_LayoutConfig layout;
    Clay_Color backgroundColor;
    Clay_CornerRadius cornerRadius;
    Clay_AspectRatioElementConfig aspectRatio;
    Clay_ImageElementConfig image;
    Clay_FloatingElementConfig floating;
    Clay_CustomElementConfig custom;
    Clay_ClipElementConfig clip;
    Clay_BorderElementConfig border;
    void *userData;
} Clay_ElementDeclaration;
typedef CLAY_PACKED_ENUM {
    CLAY_ERROR_TYPE_TEXT_MEASUREMENT_FUNCTION_NOT_PROVIDED,
    CLAY_ERROR_TYPE_ARENA_CAPACITY_EXCEEDED,
    CLAY_ERROR_TYPE_ELEMENTS_CAPACITY_EXCEEDED,
    CLAY_ERROR_TYPE_TEXT_MEASUREMENT_CAPACITY_EXCEEDED,
    CLAY_ERROR_TYPE_DUPLICATE_ID,
    CLAY_ERROR_TYPE_FLOATING_CONTAINER_PARENT_NOT_FOUND,
    CLAY_ERROR_TYPE_PERCENTAGE_OVER_1,
    CLAY_ERROR_TYPE_INTERNAL_ERROR,
} Clay_ErrorType;
typedef struct Clay_ErrorData {
    Clay_ErrorType errorType;
    Clay_String errorText;
    void *userData;
} Clay_ErrorData;
typedef struct {
    void (*errorHandlerFunction)(Clay_ErrorData errorText);
    void *userData;
} Clay_ErrorHandler;
CLAY_DLL_EXPORT uint32_t Clay_MinMemorySize(void);
CLAY_DLL_EXPORT void Clay_OnHover(void (*onHoverFunction)(Clay_ElementId elementId, Clay_PointerData pointerData, intptr_t userData), intptr_t userData);
CLAY_DLL_EXPORT void Clay_SetMeasureTextFunction(Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text, Clay_TextElementConfig *config, void *userData), void *userData);
CLAY_DLL_EXPORT void Clay_SetQueryScrollOffsetFunction(Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId, void *userData), void *userData);
typedef struct {
    union {
        Clay__LayoutElementChildren children;
        Clay__TextElementData *textElementData;
    } childrenOrTextContent;
    Clay_Dimensions dimensions;
    Clay_Dimensions minDimensions;
    Clay_LayoutConfig *layoutConfig;
    Clay__ElementConfigArraySlice elementConfigs;
    uint32_t id;
} Clay_LayoutElement;
    Clay_Dimensions (*Clay__MeasureText)(Clay_StringSlice text, Clay_TextElementConfig *config, void *userData);
    Clay_Vector2 (*Clay__QueryScrollOffset)(uint32_t elementId, void *userData);
CLAY_WASM_EXPORT("Clay_MinMemorySize")
uint32_t Clay_MinMemorySize(void) {
    Clay_Context fakeContext = {
        .maxElementCount = Clay__defaultMaxElementCount,
        .maxMeasureTextCacheWordCount = Clay__defaultMaxMeasureTextWordCacheCount,
        .internalArena = {
            .capacity = SIZE_MAX,
            .memory = NULL,
        }
    };
    Clay_Context* currentContext = Clay_GetCurrentContext();
    if (currentContext) {
        fakeContext.maxElementCount = currentContext->maxElementCount;
        fakeContext.maxMeasureTextCacheWordCount = currentContext->maxMeasureTextCacheWordCount;
    }
    Clay__Context_Allocate_Arena(&fakeContext.internalArena);
    Clay__InitializePersistentMemory(&fakeContext);
    Clay__InitializeEphemeralMemory(&fakeContext);
    return (uint32_t)fakeContext.internalArena.nextAllocation + 128;
}
void Clay_SetMeasureTextFunction(Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text, Clay_TextElementConfig *config, void *userData), void *userData) {
    Clay_Context* context = Clay_GetCurrentContext();
    Clay__MeasureText = measureTextFunction;
    context->measureTextUserData = userData;
}
void Clay_SetQueryScrollOffsetFunction(Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId, void *userData), void *userData) {
    Clay_Context* context = Clay_GetCurrentContext();
    Clay__QueryScrollOffset = queryScrollOffsetFunction;
    context->queryScrollOffsetUserData = userData;
}
void Clay_OnHover(void (*onHoverFunction)(Clay_ElementId elementId, Clay_PointerData pointerInfo, intptr_t userData), intptr_t userData) {
    Clay_Context* context = Clay_GetCurrentContext();
    if (context->booleanWarnings.maxElementsExceeded) {
        return;
    }
    Clay_LayoutElement *openLayoutElement = Clay__GetOpenLayoutElement();
    if (openLayoutElement->id == 0) {
        Clay__GenerateIdForAnonymousElement(openLayoutElement);
    }
    Clay_LayoutElementHashMapItem *hashMapItem = Clay__GetHashMapItem(openLayoutElement->id);
    hashMapItem->onHoverFunction = onHoverFunction;
    hashMapItem->hoverFunctionUserData = userData;
}